--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: clang++ test2table.cpp -o test2table
+      run: clang++ text2table.cpp -o text2table
     - name: Test
-      run: ./test2table tests/in/test1.txt && cmp out.txt tests/out/test1.txt
+      run: ./text2table tests/in/test1.txt && cmp out.txt tests/out/test1.txt
 
