--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Build
       run: clang++ text2table.cpp -o text2table
     - name: Test
-      run: ./text2table tests/in/test1.txt && cmp out.txt tests/out/test1.txt
+      run: ./text2table tests/in/test1.txt out.txt && cmp out.txt tests/out/test1.txt
 
